# spectra-plotter

./: .gitignore  LICENSE  Plot_spectra_local_app_UPDATED.py  README.md  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  USER_GUIDE.md
spectra_plotter/: __init__.py  __main__.py  app.py  io.py  line_catalog.py  processing.py
spectra_plotter/assets/: style.css
tests/: test_processing.py
